@@ -49,7 +49,7 @@ See documentation for the Fink::SelfUpdate base class.
 
 =cut
 
-sub desc_short {
+sub description {
 	my $class = shift;  # class method for now
 
 	return 'Stick to point releases';
